@@ -5,17 +5,17 @@ import com.backend.common.dto.PageResponse;
 import com.backend.common.exception.BusinessException;
 import com.backend.common.exception.ErrorCode;
 import com.backend.domain.member.Member;
-import com.backend.domain.shop.Product;
-import com.backend.domain.shop.ProductImage;
+import com.backend.domain.shop.*;
 import com.backend.dto.shop.request.ProductCreateRequest;
 import com.backend.dto.shop.request.ProductSearchRequest;
 import com.backend.dto.shop.request.ProductUpdateRequest;
+import com.backend.dto.shop.request.ProductVariantRequest;
+import com.backend.dto.shop.response.CategoryResponse;
 import com.backend.dto.shop.response.ProductImageResponse;
 import com.backend.dto.shop.response.ProductResponse;
+import com.backend.dto.shop.response.ProductVariantResponse;
 import com.backend.repository.member.MemberRepository;
-import com.backend.repository.shop.ProductImageRepository;
-import com.backend.repository.shop.ProductRepository;
-import com.backend.repository.shop.ProductSearch;
+import com.backend.repository.shop.*;
 import com.backend.service.file.FileStorageService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -24,10 +24,8 @@ import org.springframework.data.support.PageableExecutionUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -40,424 +38,485 @@ public class ProductServiceImpl implements ProductService {
     private final ProductSearch productSearch;
     private final MemberRepository memberRepository;
     private final FileStorageService fileStorageService;
+
     private final ProductImageRepository productImageRepository;
+    private final ProductVariantRepository productVariantRepository;
+
+    private final CategoryRepository categoryRepository;
+    private final ProductCategoryRepository productCategoryRepository;
+
+    // ===========================
+    // Public APIs
+    // ===========================
 
     @Override
     @Transactional
     public ProductResponse create(ProductCreateRequest request, Long createdBy) {
-        // TODO: 추후 member 도메인 추가 시 admin 권한 체크
-        // if (!isAdmin(createdBy)) {
-        //     throw new BusinessException(ErrorCode.FORBIDDEN);
-        // }
-
-        // 중복 체크
         if (productRepository.existsByName(request.getName())) {
             throw new BusinessException(ErrorCode.SHOP_PRODUCT_ALREADY_EXISTS);
         }
 
-        // Member 조회
         Member member = memberRepository.findById(createdBy != null ? createdBy : 1L)
                 .orElseThrow(() -> new BusinessException(ErrorCode.MEMBER_NOT_FOUND, createdBy));
 
-        // 도메인 엔티티 생성
         Product product = Product.builder()
                 .name(request.getName())
                 .description(request.getDescription())
                 .basePrice(request.getBasePrice())
+                .status(request.getStatus())
                 .createdBy(member)
                 .build();
 
-        // 저장
+        // 1) 이미지/옵션은 컬렉션 기반으로 구성 (cascade로 저장)
+        replaceImages(product, request.getImageFilePaths());
+        replaceVariants(product, request.getVariants());
+
+        // 2) 상품 저장(이미지/옵션 포함)
         Product saved = productRepository.save(product);
         log.info("Product created: id={}, name={}", saved.getId(), saved.getName());
 
-        // 이미지 연결 (imageFilePaths가 있으면)
-        if (request.getImageFilePaths() != null && !request.getImageFilePaths().isEmpty()) {
-            connectImagesToProduct(saved.getId(), request.getImageFilePaths());
+        // 3) 카테고리는 조인 테이블이라 별도로 replace
+        List<Long> categoryIds = resolveCategoryIds(request.getCategoryTypes(), request.getCategoryIds());
+        if (categoryIds != null) {
+            replaceCategories(saved, categoryIds);
         }
 
-        // DTO 변환 및 이미지 URL 조립
-        return toResponseWithImages(saved);
+        // 응답용 조회(현재 구조 유지)
+        List<ProductImage> images = productImageRepository.findByProductIdAndDeletedAtIsNull(saved.getId());
+        List<ProductVariant> variants = productVariantRepository.findByProductId(saved.getId());
+        return toFullResponse(saved, images, variants);
     }
 
     @Override
     public ProductResponse findById(Long id) {
-        Product product = productRepository.findByIdAndDeletedAtIsNull(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, id));
+        Product product = findActiveProduct(id);
 
-        return toResponseWithImages(product);
+        List<ProductImage> images = productImageRepository.findByProductIdAndDeletedAtIsNull(id);
+        List<ProductVariant> variants = productVariantRepository.findByProductId(id);
+
+        return toFullResponse(product, images, variants);
     }
 
     @Override
     public PageResponse<ProductResponse> findAll(PageRequest pageRequest, ProductSearchRequest searchRequest) {
-        // 1. Products 페이징 조회 (createdBy만 페치 조인, images는 제외)
-        Page<Product> products = productSearch.search(
-                searchRequest.toCondition(),
-                pageRequest.toPageable()
-        );
+        Page<Product> products = productSearch.search(searchRequest.toCondition(), pageRequest.toPageable());
+        List<Product> content = products.getContent();
 
-        // 2-쿼리 전략: product ids로 images를 한 번에 조회
-        List<Product> productList = products.getContent();
-        if (productList.isEmpty()) {
+        if (content.isEmpty()) {
             return PageResponse.of(
-                    products.map(this::toResponseWithImages),
+                    products.map(p -> toResponseWithImagesAndVariants(p, List.of(), List.of())),
                     pageRequest.getPage()
             );
         }
 
-        // 2. Product IDs 추출
-        List<Long> productIds = productList.stream()
-                .map(Product::getId)
-                .collect(Collectors.toList());
+        List<Long> productIds = content.stream().map(Product::getId).toList();
 
-        // 3. 모든 images를 한 번에 조회 (1번의 쿼리)
         List<ProductImage> allImages = productImageRepository.findByProductIdIn(productIds);
+        List<ProductVariant> allVariants = productVariantRepository.findByProductIdIn(productIds);
 
-        // 4. Product ID별로 images 그룹화
-        Map<Long, List<ProductImage>> imagesByProductId = allImages.stream()
-                .collect(Collectors.groupingBy(image -> image.getProduct().getId()));
+        Map<Long, List<ProductImage>> imagesByProductId =
+                allImages.stream().collect(Collectors.groupingBy(img -> img.getProduct().getId()));
 
-        // 5. 각 Product에 images 설정 후 변환
-        List<ProductResponse> responses = productList.stream()
-                .map(product -> {
-                    // Product에 images 설정 (영속성 컨텍스트에 이미 로드된 images 사용)
-                    List<ProductImage> productImages = imagesByProductId.getOrDefault(
-                            product.getId(), 
-                            java.util.Collections.emptyList()
-                    );
-                    // images를 product에 설정 (프록시 대신 실제 컬렉션 사용)
-                    return toResponseWithImages(product, productImages);
-                })
-                .collect(Collectors.toList());
+        Map<Long, List<ProductVariant>> variantsByProductId =
+                allVariants.stream().collect(Collectors.groupingBy(v -> v.getProduct().getId()));
 
-        // Page 객체 재생성 (변환된 responses 사용)
-        Page<ProductResponse> responsePage = org.springframework.data.support.PageableExecutionUtils.getPage(
+        List<ProductResponse> responses = content.stream()
+                .map(p -> toResponseWithImagesAndVariants(
+                        p,
+                        imagesByProductId.getOrDefault(p.getId(), List.of()),
+                        variantsByProductId.getOrDefault(p.getId(), List.of())
+                ))
+                .toList();
+
+        Page<ProductResponse> responsePage = PageableExecutionUtils.getPage(
                 responses,
                 products.getPageable(),
                 products::getTotalElements
         );
 
-        return PageResponse.of(
-                responsePage,
-                pageRequest.getPage()
-        );
+        return PageResponse.of(responsePage, pageRequest.getPage());
     }
 
     @Override
     @Transactional
     public ProductResponse update(Long id, ProductUpdateRequest request) {
-        // TODO: 추후 member 도메인 추가 시 admin 권한 체크
-        // if (!isAdmin(getCurrentUserId())) {
-        //     throw new BusinessException(ErrorCode.FORBIDDEN);
-        // }
+        Product product = findActiveProduct(id);
 
-        Product product = productRepository.findByIdAndDeletedAtIsNull(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, id));
+        applyBasicFields(product, request);
 
-        // 부분 업데이트 (null이 아닌 필드만 업데이트)
-        if (request.getName() != null && !request.getName().trim().isEmpty()) {
-            String newName = request.getName().trim();
-            // 이름이 실제로 변경된 경우에만 중복 체크 (성능 최적화)
-            if (!product.getName().equals(newName)) {
-                // 이름 중복 체크 (다른 상품과 이름이 겹치지 않는지)
-                productRepository.findByNameAndDeletedAtIsNull(newName)
-                        .filter(p -> !p.getId().equals(id))
-                        .ifPresent(p -> {
-                            throw new BusinessException(ErrorCode.SHOP_PRODUCT_ALREADY_EXISTS);
-                        });
-            }
-            product.changeName(newName);
-        }
-        if (request.getDescription() != null && !request.getDescription().trim().isEmpty()) {
-            product.changeDescription(request.getDescription());
-        }
-        if (request.getBasePrice() != null) {
-            product.changeBasePrice(request.getBasePrice());
-        }
-
-        // 이미지 업데이트 (imageFilePaths가 null이 아니면 처리)
         if (request.getImageFilePaths() != null) {
-            updateProductImages(id, request.getImageFilePaths());
+            // update는 diff 기반 replace 권장(동일 filePath 재사용)
+            replaceImagesDiff(product, request.getImageFilePaths());
+        }
+
+        if (request.getVariants() != null) {
+            replaceVariants(product, request.getVariants());
+        }
+
+        List<Long> categoryIdsToUse = resolveCategoryIds(request.getCategoryTypes(), request.getCategoryIds());
+        if (categoryIdsToUse != null) {
+            replaceCategories(product, categoryIdsToUse);
         }
 
         Product updated = productRepository.save(product);
         log.info("Product updated: id={}", updated.getId());
 
-        return toResponseWithImages(updated);
+        List<ProductImage> images = productImageRepository.findByProductIdAndDeletedAtIsNull(updated.getId());
+        List<ProductVariant> variants = productVariantRepository.findByProductId(updated.getId());
+        return toFullResponse(updated, images, variants);
     }
 
     @Override
     @Transactional
     public void delete(Long id) {
-        // TODO: 추후 member 도메인 추가 시 admin 권한 체크
-        // if (!isAdmin(getCurrentUserId())) {
-        //     throw new BusinessException(ErrorCode.FORBIDDEN);
-        // }
-
-        Product product = productRepository.findByIdAndDeletedAtIsNull(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, id));
-
-        // 소프트 삭제
+        Product product = findActiveProduct(id);
         product.softDelete();
         productRepository.save(product);
-
         log.info("Product deleted: id={}", id);
     }
 
     /**
-     * Product 엔티티를 ProductResponse로 변환하고 이미지 URL을 조립합니다.
-     * 
-     * @param product Product 엔티티
-     * @return 이미지 URL이 조립된 ProductResponse
+     * 단건 토글(대표 지정)은 patch 성격이므로 유지.
      */
-    private ProductResponse toResponseWithImages(Product product) {
-        // 단건 조회 시에는 product.getImages() 사용 (이미 @EntityGraph로 로드됨)
-        return toResponseWithImages(product, product.getImages());
+    @Transactional
+    public void setPrimaryImage(Long productId, UUID imageUuid) {
+        Product product = findActiveProduct(productId);
+
+        ProductImage target = product.getImages().stream()
+                .filter(img -> img.getDeletedAt() == null && img.getUuid().equals(imageUuid))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("이미지를 찾을 수 없습니다. productId=" + productId + ", imageUuid=" + imageUuid));
+
+        // 활성 이미지 primary 정리 후 target만 primary
+        product.getImages().stream()
+                .filter(img -> img.getDeletedAt() == null)
+                .forEach(ProductImage::markAsSecondary);
+
+        target.markAsPrimary();
+
+        productRepository.save(product);
+        log.info("Primary image set: productId={}, imageUuid={}", productId, imageUuid);
+    }
+
+    // ===========================
+    // Core Replace Methods
+    // ===========================
+
+    /**
+     * create 등에서 단순 구성용(기존이 없다는 가정) - 빈이면 전체 제거 의미.
+     */
+    private void replaceImages(Product product, List<String> filePaths) {
+        List<String> requested = normalizePaths(filePaths);
+        if (requested.isEmpty()) {
+            // 활성만 soft delete + 컬렉션에서 제거(현재 정책 유지)
+            softDeleteAndRemoveActiveImages(product);
+            return;
+        }
+
+        softDeleteAndRemoveActiveImages(product);
+
+        for (int i = 0; i < requested.size(); i++) {
+            product.getImages().add(ProductImage.builder()
+                    .product(product)
+                    .filePath(requested.get(i))
+                    .primaryImage(i == 0)
+                    .build());
+        }
     }
 
     /**
-     * Product 엔티티를 ProductResponse로 변환하고 이미지 URL을 조립합니다.
-     * 2-쿼리 전략에서 사용 (이미 조회된 images를 전달)
-     * 
-     * @param product Product 엔티티
-     * @param images 이미 조회된 ProductImage 리스트 (null이면 product.getImages() 사용)
-     * @return 이미지 URL이 조립된 ProductResponse
+     * update에서 권장: 동일 filePath는 재사용, 없는 것만 생성.
      */
+    private void replaceImagesDiff(Product product, List<String> filePaths) {
+        List<String> requested = normalizePaths(filePaths);
+
+        if (requested.isEmpty()) {
+            softDeleteAndRemoveActiveImages(product);
+            log.info("All images removed from product: productId={}", product.getId());
+            return;
+        }
+
+        // 기존 활성 이미지: filePath -> image
+        Map<String, ProductImage> activeByPath = product.getImages().stream()
+                .filter(img -> img.getDeletedAt() == null)
+                .collect(Collectors.toMap(
+                        ProductImage::getFilePath,
+                        Function.identity(),
+                        (a, b) -> a
+                ));
+
+        // 요청 순서대로 재사용/생성
+        List<ProductImage> nextActives = new ArrayList<>(requested.size());
+        for (String path : requested) {
+            ProductImage reused = activeByPath.remove(path);
+            if (reused != null) {
+                reused.markAsSecondary(); // primary는 아래에서 1개 보장
+                nextActives.add(reused);
+            } else {
+                nextActives.add(ProductImage.builder()
+                        .product(product)
+                        .filePath(path)
+                        .primaryImage(false)
+                        .build());
+            }
+        }
+
+        // 요청에 없는 기존 활성 => soft delete + 컬렉션에서 제거
+        for (ProductImage toDelete : activeByPath.values()) {
+            toDelete.softDelete();
+        }
+        product.getImages().removeAll(activeByPath.values());
+
+        // 현재 활성들을 제거하고 nextActives로 재구성(중복 add 방지 목적)
+        List<ProductImage> currentActives = product.getImages().stream()
+                .filter(img -> img.getDeletedAt() == null)
+                .toList();
+        product.getImages().removeAll(currentActives);
+        product.getImages().addAll(nextActives);
+
+        // primary 1개 보장: 요청 첫 번째를 primary
+        product.getImages().stream()
+                .filter(img -> img.getDeletedAt() == null)
+                .forEach(ProductImage::markAsSecondary);
+
+        product.getImages().stream()
+                .filter(img -> img.getDeletedAt() == null)
+                .findFirst()
+                .ifPresent(ProductImage::markAsPrimary);
+
+        log.info("Product images updated(diff): productId={}, requested={}, keptOrCreated={}, deleted={}",
+                product.getId(), requested.size(), nextActives.size(), activeByPath.size());
+    }
+
+    private void softDeleteAndRemoveActiveImages(Product product) {
+        List<ProductImage> actives = product.getImages().stream()
+                .filter(img -> img.getDeletedAt() == null)
+                .toList();
+        actives.forEach(ProductImage::softDelete);
+        product.getImages().removeAll(actives);
+    }
+
+    private void replaceVariants(Product product, List<ProductVariantRequest> requests) {
+        if (requests == null) return;
+
+        product.getVariants().clear();
+
+        if (requests.isEmpty()) {
+            log.info("All variants removed from product: productId={}", product.getId());
+            return;
+        }
+
+        for (ProductVariantRequest req : requests) {
+            product.getVariants().add(ProductVariant.builder()
+                    .product(product)
+                    .sku(req.getSku())
+                    .optionText(req.getOptionText())
+                    .price(req.getPrice())
+                    .stockQty(req.getStockQty() != null ? req.getStockQty() : 0)
+                    .active(req.getActive() != null ? req.getActive() : true)
+                    .build());
+        }
+
+        log.info("Product variants replaced: productId={}, variantCount={}", product.getId(), requests.size());
+    }
+
+    /**
+     * 카테고리는 현재 구조상 repo 기반 유지(조인 엔티티).
+     * - update/create 둘 다 replace로 통일
+     */
+    @Transactional
+    private void replaceCategories(Product product, List<Long> categoryIds) {
+        // 기존 연결 삭제
+        List<ProductCategory> existing = productCategoryRepository.findById_ProductId(product.getId());
+        if (!existing.isEmpty()) {
+            // deleteAll이 반복 delete로 갈 수 있어 필요시 deleteAllInBatch로 교체
+            productCategoryRepository.deleteAll(existing);
+        }
+
+        if (categoryIds == null || categoryIds.isEmpty()) {
+            log.info("All categories removed from product: productId={}", product.getId());
+            return;
+        }
+
+        // 새 연결 생성
+        List<ProductCategory> toSave = new ArrayList<>(categoryIds.size());
+        for (Long categoryId : categoryIds) {
+            Category category = categoryRepository.findById(categoryId)
+                    .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_CATEGORY_NOT_FOUND, categoryId));
+
+            toSave.add(ProductCategory.builder()
+                    .product(product)
+                    .category(category)
+                    .build());
+        }
+
+        productCategoryRepository.saveAll(toSave);
+        log.info("Product categories replaced: productId={}, categoryCount={}", product.getId(), categoryIds.size());
+    }
+
+    // ===========================
+    // Helpers
+    // ===========================
+
+    private Product findActiveProduct(Long id) {
+        return productRepository.findByIdAndDeletedAtIsNull(id)
+                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, id));
+    }
+
+    private void applyBasicFields(Product product, ProductUpdateRequest request) {
+        if (request.getName() != null && !request.getName().trim().isEmpty()) {
+            String newName = request.getName().trim();
+            if (!product.getName().equals(newName)) {
+                productRepository.findByNameAndDeletedAtIsNull(newName)
+                        .filter(p -> !p.getId().equals(product.getId()))
+                        .ifPresent(p -> { throw new BusinessException(ErrorCode.SHOP_PRODUCT_ALREADY_EXISTS); });
+            }
+            product.changeName(newName);
+        }
+
+        if (request.getDescription() != null && !request.getDescription().trim().isEmpty()) {
+            product.changeDescription(request.getDescription());
+        }
+
+        if (request.getBasePrice() != null) {
+            product.changeBasePrice(request.getBasePrice());
+        }
+
+        if (request.getStatus() != null) {
+            product.changeStatus(request.getStatus());
+        }
+    }
+
+    private List<String> normalizePaths(List<String> paths) {
+        if (paths == null) return List.of();
+        return paths.stream()
+                .filter(p -> p != null && !p.trim().isEmpty())
+                .map(String::trim)
+                .distinct() // 요청 중복 방지(순서 유지)
+                .toList();
+    }
+
+    /**
+     * categoryTypes(Enum 이름) 또는 categoryIds를 카테고리 ID 목록으로 반환.
+     * - null: 유지
+     * - empty: 전체 제거 의미(상위에서 replaceCategories 호출)
+     */
+    private List<Long> resolveCategoryIds(List<String> categoryTypes, List<Long> categoryIds) {
+        if (categoryTypes != null && !categoryTypes.isEmpty()) {
+            List<Long> ids = new ArrayList<>();
+            for (String typeName : categoryTypes) {
+                CategoryType type;
+                try {
+                    type = CategoryType.valueOf(typeName);
+                } catch (IllegalArgumentException e) {
+                    throw new BusinessException(ErrorCode.INVALID_INPUT_VALUE);
+                }
+                Category category = getOrCreateRootCategory(type);
+                ids.add(category.getId());
+            }
+            return ids;
+        }
+        return categoryIds;
+    }
+
+    @Transactional
+    private Category getOrCreateRootCategory(CategoryType categoryType) {
+        return categoryRepository.findByCategoryTypeAndParentIsNull(categoryType)
+                .orElseGet(() -> {
+                    log.info("Creating root category for type: {} (Lazy Create)", categoryType);
+                    Category saved = categoryRepository.saveAndFlush(Category.builder()
+                            .parent(null)
+                            .categoryType(categoryType)
+                            .sortOrder(0)
+                            .build());
+                    return categoryRepository.findByCategoryTypeAndParentIsNull(categoryType).orElse(saved);
+                });
+    }
+
+    // ===========================
+    // Response mapping (기존 구조 유지)
+    // ===========================
+
+    private ProductResponse toFullResponse(Product product, List<ProductImage> images, List<ProductVariant> variants) {
+        ProductResponse base = toResponseWithImages(product, images);
+
+        List<ProductVariantResponse> variantResponses = variants.stream()
+                .map(ProductVariantResponse::from)
+                .toList();
+
+        List<ProductCategory> pcs = productCategoryRepository.findById_ProductId(product.getId());
+        List<CategoryResponse> categoryResponses = pcs.stream()
+                .map(pc -> CategoryResponse.from(pc.getCategory()))
+                .toList();
+
+        return ProductResponse.builder()
+                .id(base.getId())
+                .name(base.getName())
+                .description(base.getDescription())
+                .status(base.getStatus())
+                .basePrice(base.getBasePrice())
+                .createdAt(base.getCreatedAt())
+                .updatedAt(base.getUpdatedAt())
+                .createdBy(base.getCreatedBy())
+                .images(base.getImages())
+                .variants(variantResponses)
+                .categories(categoryResponses)
+                .build();
+    }
+
     private ProductResponse toResponseWithImages(Product product, List<ProductImage> images) {
-        ProductResponse response = ProductResponse.from(product);
-        
-        // 이미지 목록을 ProductImageResponse로 변환
+        ProductResponse base = ProductResponse.from(product);
+
         List<ProductImageResponse> imageResponses = images.stream()
                 .sorted(Comparator.comparing(ProductImage::getCreatedAt))
                 .map(this::toImageResponse)
-                .collect(Collectors.toList());
-        
-        // Builder를 사용하여 images 필드 설정
+                .toList();
+
         return ProductResponse.builder()
-                .id(response.getId())
-                .name(response.getName())
-                .description(response.getDescription())
-                .status(response.getStatus())
-                .basePrice(response.getBasePrice())
-                .createdAt(response.getCreatedAt())
-                .updatedAt(response.getUpdatedAt())
-                .createdBy(response.getCreatedBy())
+                .id(base.getId())
+                .name(base.getName())
+                .description(base.getDescription())
+                .status(base.getStatus())
+                .basePrice(base.getBasePrice())
+                .createdAt(base.getCreatedAt())
+                .updatedAt(base.getUpdatedAt())
+                .createdBy(base.getCreatedBy())
                 .images(imageResponses)
                 .build();
     }
 
-    /**
-     * ProductImage 엔티티를 ProductImageResponse로 변환하고 URL을 조립합니다.
-     * 
-     * @param image ProductImage 엔티티
-     * @return URL이 조립된 ProductImageResponse
-     */
+    private ProductResponse toResponseWithImagesAndVariants(Product product, List<ProductImage> images, List<ProductVariant> variants) {
+        ProductResponse base = toResponseWithImages(product, images);
+
+        List<ProductVariantResponse> variantResponses = variants.stream()
+                .map(ProductVariantResponse::from)
+                .toList();
+
+        return ProductResponse.builder()
+                .id(base.getId())
+                .name(base.getName())
+                .description(base.getDescription())
+                .status(base.getStatus())
+                .basePrice(base.getBasePrice())
+                .createdAt(base.getCreatedAt())
+                .updatedAt(base.getUpdatedAt())
+                .createdBy(base.getCreatedBy())
+                .images(base.getImages())
+                .variants(variantResponses)
+                .build();
+    }
+
     private ProductImageResponse toImageResponse(ProductImage image) {
-        String url;
         String filePath = image.getFilePath();
-        
-        // 점진적 마이그레이션: filePath가 있으면 filePath 사용, 없으면 기존 url 사용
-        if (filePath != null && !filePath.trim().isEmpty()) {
-            url = fileStorageService.getFileUrl(filePath);
-        } else if (image.getUrl() != null && !image.getUrl().trim().isEmpty()) {
-            // 기존 데이터 호환성 유지
-            url = image.getUrl();
-        } else {
-            url = null;
-        }
-        
+        String url = (filePath != null && !filePath.trim().isEmpty())
+                ? fileStorageService.getFileUrl(filePath)
+                : null;
+
         return ProductImageResponse.builder()
                 .uuid(image.getUuid())
                 .url(url)
-                .filePath(filePath) // 프론트엔드에서 이미지 수정 시 필요
+                .filePath(filePath)
                 .primaryImage(image.isPrimaryImage())
                 .build();
-    }
-
-    /**
-     * 상품의 대표 이미지를 설정합니다.
-     * 트랜잭션 내에서 해당 상품의 기존 primary 이미지를 모두 false로 변경하고,
-     * 대상 이미지를 primary로 설정합니다.
-     * 
-     * @param productId 상품 ID
-     * @param imageUuid 설정할 이미지 UUID
-     */
-    @Transactional
-    public void setPrimaryImage(Long productId, UUID imageUuid) {
-        // 상품 존재 확인
-        Product product = productRepository.findByIdAndDeletedAtIsNull(productId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, productId));
-
-        // 대상 이미지 조회
-        ProductImage targetImage = productImageRepository.findByProductIdAndUuid(productId, imageUuid)
-                .orElseThrow(() -> new IllegalArgumentException("이미지를 찾을 수 없습니다. productId=" + productId + ", imageUuid=" + imageUuid));
-
-        // 해당 상품의 모든 primary 이미지를 false로 변경
-        List<ProductImage> primaryImages = productImageRepository.findByProductIdAndPrimaryImage(productId, true);
-        for (ProductImage image : primaryImages) {
-            image.markAsSecondary();
-            productImageRepository.save(image);
-        }
-
-        // 대상 이미지를 primary로 설정
-        targetImage.markAsPrimary();
-        productImageRepository.save(targetImage);
-
-        log.info("Primary image set: productId={}, imageUuid={}", productId, imageUuid);
-    }
-
-    /**
-     * 상품에 이미지를 추가합니다.
-     * 첫 이미지면 primary=true로 설정하고, 아니면 false로 설정합니다.
-     * 
-     * @param productId 상품 ID
-     * @param filePath 스토리지 키 (파일 경로)
-     * @return 추가된 ProductImage
-     */
-    @Transactional
-    public ProductImage addImage(Long productId, String filePath) {
-        // 상품 존재 확인
-        Product product = productRepository.findByIdAndDeletedAtIsNull(productId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, productId));
-
-        // 해당 상품의 기존 이미지 개수 확인
-        List<ProductImage> existingImages = productImageRepository.findByProductId(productId);
-        boolean isFirstImage = existingImages.isEmpty();
-
-        // 이미지 생성
-        ProductImage image = ProductImage.builder()
-                .product(product)
-                .filePath(filePath)
-                .primaryImage(isFirstImage) // 첫 이미지면 primary=true
-                .build();
-
-        ProductImage saved = productImageRepository.save(image);
-        log.info("Image added: productId={}, imageUuid={}, isPrimary={}", 
-                productId, saved.getUuid(), saved.isPrimaryImage());
-
-        return saved;
-    }
-
-    /**
-     * 상품 이미지를 삭제합니다.
-     * 삭제 대상이 primary였으면 남은 이미지 중 하나를 primary로 승격합니다.
-     * 
-     * @param productId 상품 ID
-     * @param imageUuid 삭제할 이미지 UUID
-     */
-    @Transactional
-    public void deleteImage(Long productId, UUID imageUuid) {
-        // 상품 존재 확인
-        Product product = productRepository.findByIdAndDeletedAtIsNull(productId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, productId));
-
-        // 삭제할 이미지 조회
-        ProductImage imageToDelete = productImageRepository.findByProductIdAndUuid(productId, imageUuid)
-                .orElseThrow(() -> new IllegalArgumentException("이미지를 찾을 수 없습니다. productId=" + productId + ", imageUuid=" + imageUuid));
-
-        boolean wasPrimary = imageToDelete.isPrimaryImage();
-
-        // 이미지 삭제
-        productImageRepository.delete(imageToDelete);
-        log.info("Image deleted: productId={}, imageUuid={}", productId, imageUuid);
-
-        // 삭제된 이미지가 primary였고, 남은 이미지가 있으면 하나를 primary로 승격
-        if (wasPrimary) {
-            List<ProductImage> remainingImages = productImageRepository.findByProductId(productId);
-            if (!remainingImages.isEmpty()) {
-                // 정렬 기준: createdAt -> uuid
-                ProductImage newPrimary = remainingImages.stream()
-                        .sorted(Comparator.comparing(ProductImage::getCreatedAt)
-                                .thenComparing(ProductImage::getUuid))
-                        .findFirst()
-                        .orElseThrow(); // 이미 isEmpty 체크했으므로 항상 존재
-
-                newPrimary.markAsPrimary();
-                productImageRepository.save(newPrimary);
-                log.info("Primary image promoted: productId={}, imageUuid={}", 
-                        productId, newPrimary.getUuid());
-            }
-        }
-    }
-
-    /**
-     * 상품에 이미지를 연결합니다.
-     * 첫 이미지면 primary=true로 설정하고, 아니면 false로 설정합니다.
-     * 
-     * @param productId 상품 ID
-     * @param imageFilePaths 이미지 파일 경로 목록
-     */
-    @Transactional
-    private void connectImagesToProduct(Long productId, List<String> imageFilePaths) {
-        if (imageFilePaths == null || imageFilePaths.isEmpty()) {
-            return;
-        }
-
-        // 상품 존재 확인
-        Product product = productRepository.findByIdAndDeletedAtIsNull(productId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, productId));
-
-        // 기존 이미지 개수 확인 (첫 이미지 여부 판단)
-        List<ProductImage> existingImages = productImageRepository.findByProductId(productId);
-        boolean isFirstImage = existingImages.isEmpty();
-        boolean firstImageSet = false; // 첫 번째 유효한 이미지 추적
-
-        // 각 파일 경로에 대해 이미지 엔티티 생성
-        for (String filePath : imageFilePaths) {
-            if (filePath == null || filePath.trim().isEmpty()) {
-                continue; // 빈 경로는 건너뜀
-            }
-
-            // 첫 번째 유효한 이미지면 primary=true, 나머지는 false
-            boolean isPrimary = isFirstImage && !firstImageSet;
-            if (isPrimary) {
-                firstImageSet = true;
-            }
-
-            ProductImage image = ProductImage.builder()
-                    .product(product)
-                    .filePath(filePath.trim())
-                    .primaryImage(isPrimary)
-                    .build();
-
-            productImageRepository.save(image);
-            log.info("Image connected to product: productId={}, filePath={}, isPrimary={}", 
-                    productId, filePath, isPrimary);
-        }
-    }
-
-    /**
-     * 상품의 이미지를 업데이트합니다.
-     * imageFilePaths가 빈 리스트면 모든 이미지 제거, 값이 있으면 해당 이미지들로 교체합니다.
-     * 
-     * @param productId 상품 ID
-     * @param imageFilePaths 새로운 이미지 파일 경로 목록 (null이면 기존 유지, 빈 리스트면 모두 제거)
-     */
-    @Transactional
-    private void updateProductImages(Long productId, List<String> imageFilePaths) {
-        // 상품 존재 확인
-        Product product = productRepository.findByIdAndDeletedAtIsNull(productId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.SHOP_PRODUCT_NOT_FOUND, productId));
-
-        // 기존 이미지 조회
-        List<ProductImage> existingImages = productImageRepository.findByProductId(productId);
-
-        // 빈 리스트면 모든 이미지 제거
-        if (imageFilePaths.isEmpty()) {
-            for (ProductImage image : existingImages) {
-                productImageRepository.delete(image);
-            }
-            log.info("All images removed from product: productId={}", productId);
-            return;
-        }
-
-        // 기존 이미지 모두 삭제
-        for (ProductImage image : existingImages) {
-            productImageRepository.delete(image);
-        }
-
-        // 새로운 이미지들로 교체
-        connectImagesToProduct(productId, imageFilePaths);
-        log.info("Product images updated: productId={}, imageCount={}", productId, imageFilePaths.size());
     }
 }
